- Channel Force into Valor JE.

Fixes:
Bug tracker: https://docs.google.com/spreadsheets/d/1DxeDoLNYQ_w6A9lTuLCGRS_YDDrDTNyj7nB7XQQp6z4

- MOHB-0006
- MOHB-0003
- MOHB-0004
- MOHB-0005

Release 1.1.1 "Knight"

Changes:

- The infamy will decay faster during the Warlord Era.
- Optimized default ai strategy.
- Removed Character: Hou Debang. (Morgenrote updates so fast)
- Great Britain will open Qing's market during the Opium Wars.

Fixes:
Bug tracker: https://docs.google.com/spreadsheets/d/1DxeDoLNYQ_w6A9lTuLCGRS_YDDrDTNyj7nB7XQQp6z4

- MOHB-0007
- AI values in scripted buttons.
- Compatibility of companies.
- Encoding issues.

Release 1.2-pre1 "Kangaroo"

Changes:

- New random events: South Great Wall fixing, Spring Festival.
- New treaty article: Ban boxer rebellion.
- New characters: Feng Guifen, Bao Shichen, Wu Chongyao, Muhammad Yakub Beg.
- New law variants: Imperial Examination System, Night Watchmen.
- New company: Commercial Press.
- Boxer Rebellion remake.
- New country: Shanghai International Settlement.
- New state trait: Dragon Rise Land, Savage Land.
- Reconquest of the west remake (Qing reconquest of Xinjiang).
- Added a game rule, it will make China explode at the beginning.
- Adjusted the ruler of Great Yuan.

Fixes:
Bug tracker: https://docs.google.com/spreadsheets/d/1DxeDoLNYQ_w6A9lTuLCGRS_YDDrDTNyj7nB7XQQp6z4

- MOHB-0012
- MOHB-0008
- Ruan Yuan's Chinese localization.
- Wrong modifier time (very_long_modifier_time)
- MOHB-0010
- Dynamic country name of League of Five Provinces.

Release 1.2-pre2 "Kangaroo"

Fixes:

- MOHB-0013 and related bugs.

Release 1.2-pre3 "Kangaroo"

Changes:

- New event: Amur anti-Chinese pogroms.

Fixes:

- MOHB-0014

Release 1.2.1-pre1 "Kangaroo"
1.2.0 does not have a stable release.

Changes:

- Map overhaul.
- New clique flags (align with Hearts of Iron IV).
- Sexagenary cycle algorithm from Oriental Empires mod. Currently used for Wuxu Reform.
- Made Xianfeng progress bar more intuitive.

Fixes:

- MOHB-0015