@@ -104,7 +104,7 @@
   moh_Guifen: "Guifen"
   moh_Bao: "Bao"
   moh_Shichen: "Shichen"
-  moh_Yuan: "Yuan" # Ruan Yuan
+  moh_Yuan_2: "Yuan" # Ruan Yuan
   moh_Wu: "Wu"
   moh_Chongyao: "Chongyao"
 
