@@ -111,7 +111,7 @@
   moh_Guifen: "桂芬"
   moh_Bao: "包"
   moh_Shichen: "世臣"
-  moh_Yuan: "元" # Ruan Yuan
+  moh_Yuan_2: "元" # Ruan Yuan
   moh_Wu: "伍"
   moh_Chongyao: "崇曜"
 
