@@ -384,3 +384,4 @@ Changes:
 Fixes:
 
 - MOHB-0015
+- Some localization issues.
